Correctly detect random ship direction based on any length and the matrix dimensions. Discard ships that are too long for the matrix. Update status info to display Player Name and status including current attacker and winner.

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -52,6 +52,8 @@ html, body
       display: block
 
 .player
+  color: white
+  font-size: 1.6rem
   display: inline-block
   min-width: 370px
   min-width: 37em
@@ -60,9 +62,8 @@ html, body
   margin: 1em auto
 
   ul
-    color: white
-    font-size: 1.6rem
     list-style: none
+    padding: 0
 
 .matrix
   font-size: 1rem
